# NutritionApp

./: LICENSE  README.md  docker-compose.yml
.github/workflows/: deploy.yaml
Backend/: .dockerignore  Dockerfile  README.md  check_db.py  docker-compose.yml  pyproject.toml  search_res_example.json
Backend/nutritionapp/: auth0.py  bmi_tdee.py  db.py  food_external_api.py  main.py  models.py  mongoDB.py
Frontend/: .cta.json  Dockerfile  index.html  nginx.conf  orval.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js
Frontend/docs/: ApplicationPRD.md
Frontend/src/: App.tsx  __root.tsx  main.tsx  routeTree.gen.ts
Frontend/src/api/mutator/: custom-instance.ts
Frontend/src/components/: Navigation.tsx  Sidebar.tsx
Frontend/src/components/auth/: ProtectedRoute.tsx
Frontend/src/components/common/: UserAvatar.tsx
Frontend/src/components/goals/: GoalCard.tsx  UserSelect.tsx
Frontend/src/components/layout/: Layout.tsx  MainLayout.tsx  Navbar.tsx  Sidebar.tsx  UserMenu.tsx
Frontend/src/components/loading/: LoadingSpinner.tsx
Frontend/src/config/: auth0.ts
Frontend/src/contexts/: AuthContext.tsx  MealPlateContext.tsx  SidebarContext.tsx  ThemeContext.tsx
Frontend/src/hooks/: useAuth0Users.ts  useNutrition.ts  useNutritionAggregation.ts
Frontend/src/pages/: Dashboard.tsx  FoodSearch.tsx  Goals.tsx  Login.tsx  MealBuilder.tsx  Nutrition.tsx  Trainers.tsx
Frontend/src/routes/: __root.tsx  index.tsx  login.tsx
Frontend/src/types/: auth0.ts
Frontend/src/utils/: auth.ts  image.ts  tw.ts
(+10 files in other folders)
